--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.3.0",
     "@sendgrid/mail": "^8.1.5",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
