--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "tailwind-scrollbar": "^4.0.2",
     "three": "^0.180.0"
   },
